<?xml version="1.0"?>
<package>
  <name>sobit_common_msg</name>
  <version>0.0.0</version>
  <description>The sobit_common_msg package</description>

  <maintainer email="sobit-x6@todo.todo">sobit-x6</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
